--- a/app/templates/register-2.html
+++ b/app/templates/register-2.html
@@ -1,25 +1,35 @@
-{% extends 'base.html' %} {% block title %}Register 2 - UOttawa Health Club{%
+{% extends 'base.html' %} {% block title %}Register - UOttawa Health Club{%
 endblock %} {% block content %}
 <main>
     <form action="handle_register2" method="post">
         <div>
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" required />
+            <label for="first_name">First Name:</label>
+            <input type="text" id="first_name" name="first_name" required />
         </div>
 
         <div>
-            <label for="password">Password:</label>
-            <input type="text" id="password" name="password" required />
+            <label for="last_name">Last Name:</label>
+            <input type="text" id="last_name" name="last_name" required />
         </div>
 
         <div>
-            <label for="role">Role:</label>
-            <select id="role" name="role" required>
-                <option value="">Select a role...</option>
-                <option value="Admin">Admin</option>
-                <option value="Member">Member</option>
-                <option value="Trainer">Trainer</option>
-            </select>
+            <label for="fitness_goal">Fitness Goal:</label>
+            <input type="text" id="fitness_goal" name="fitness_goal" required />
+        </div>
+
+        <div>
+            <label for="weight">Weight (kg):</label>
+            <input type="number" id="weight" name="weight" required />
+        </div>
+
+        <div>
+            <label for="height">Height (cm):</label>
+            <input type="number" id="height" name="height" required />
+        </div>
+
+        <div>
+            <label for="age">Age:</label>
+            <input type="number" id="age" name="age" required />
         </div>
 
         <div>
