--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,53 +1,118 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap");
 
 body {
-    margin: 0;
-    font-family: 'Noto Sans Mono', monospace;
+  margin: 0;
+  font-family: "Noto Sans Mono", monospace;
 }
 
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: linear-gradient(to bottom, #ff3f66, #d7002a);
-    padding: 20px 30px;
-    color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: linear-gradient(to bottom, #ff3f66, #d7002a);
+  padding: 20px 30px;
+  color: white;
 }
 
 .header-left {
-    font-size: 24px;
-    font-weight: bold;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 .header-left a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 .header-right a {
-    color: white;
-    text-decoration: none;
-    margin-left: 20px;
-    font-size: 18px;
+  color: white;
+  text-decoration: none;
+  margin-left: 20px;
+  font-size: 18px;
 }
 
 .header-right a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 #become-a-member {
-    font-weight: bold;
-    padding: 6px;
-    background-color: white;
-    color: #d7002a;
+  font-weight: bold;
+  padding: 6px;
+  background-color: white;
+  color: #d7002a;
 }
 
 #uottawa {
-    text-align: center;
-    padding: 250px 0;
-    transition: text-shadow 0.3s ease;
+  text-align: center;
+  transition: text-shadow 0.3s ease;
+}
+
+#uottawa h1 {
+  padding: 250px 0;
+  text-align: center;
 }
 
 #uottawa:hover {
-    text-shadow: 0 0 10px darkred;
+  text-shadow: 0 0 10px darkred;
+}
+
+section {
+  padding-left: 30px;
+}
+
+.card {
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  border-left: 12px solid red;
+  border-right: 12px solid red;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 16px;
+  padding: 16px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.card a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.card h3 {
+  color: #333;
+  margin-top: 0;
+}
+
+.card p {
+  color: #666;
+  line-height: 1.5;
+}
+
+ul {
+  display: flex;
+  padding: 0;
+  list-style-type: none;
+}
+
+li {
+  margin-right: 20px;
+}
+.circle-card {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: #f2f2f2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #ccc;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  font-size: 20px;
+}
+
+.circle-card a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.circle-card p {
+  margin: 0;
 }
